# king-of-the-amazons

./: .gitignore  CMakeLists.txt  README.md  implementation_plan.md
.clinerules/: development_workflow.md  project_setup.md  version_control.md
.clinerules/workflows/: git_status_clear.md  implementation_plan_update.md  manual_update.md
data/config/: bot_config.json
docs/: requirements_cn.txt
docs/guidance/: about-cicd.md  git-commit-message-best-practices.md  plan-assessment.md
docs/implementation/: 01_project_structure.md  02_implementation_phases.md  03_technical_specifications.md  04_testing_strategy.md  05_risk_management.md  06_success_criteria.md
docs/instructions/: requirements_en.txt
docs/manuals/: game_manual.md
docs/problems/: existing_problems.md  existing_problems_001.md  existing_problems_002.md  existing_problems_003.md  existing_problems_004.md  p005.md  p006.md  p007.md  p008.md
docs/reports/: README.md  codebase_analysis_report.md  project_report_en.md  project_report_simplified_zh.md  project_report_zh.md
docs/tasks/: implementation plan corrections.md
docs/wiki/: Amazons - Botzone Wiki.html  Bot - Botzone Wiki.html
include/ai/: BasicAI.hpp  BotProcess.hpp  BotzoneAI.hpp
include/core/: Board.hpp  GameState.hpp  Move.hpp  Player.hpp  Position.hpp
include/ui/: Display.hpp  GraphicalController.hpp  GraphicalDisplay.hpp  InputHandler.hpp  MenuController.hpp  TextDisplay.hpp
include/utils/: Serializer.hpp
logs/: reloading_failure.txt
memorybank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: test_ai_white_protocol.cpp  test_gui_state_fix.cpp  test_side_selection.cpp
src/: CMakeLists.txt  main.cpp
src/ai/: BasicAI.cpp  BotProcess.cpp  BotzoneAI.cpp  CMakeLists.txt
src/core/: Board.cpp  CMakeLists.txt  GameState.cpp  Move.cpp  Position.cpp
src/features/: CMakeLists.txt
src/ui/: CMakeLists.txt  GraphicalController.cpp  GraphicalDisplay.cpp  InputHandler.cpp  MenuController.cpp  TextDisplay.cpp
src/utils/: CMakeLists.txt  Serializer.cpp
tests/: CMakeLists.txt
tests/input/: test_board_display.txt  test_gameplay.txt  test_menu_system.txt  test_phase2_complete.txt  test_save_load.txt
tests/integration/: test_botzone.cpp
tests/unit/: BoardTest.cpp  GameStateTest.cpp  MoveTest.cpp  PositionTest.cpp
